src/objects/Member_statement_pdf__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>spacing for member statement pdf page.</description>
    <fields>
        <fullName>Current_left__c</fullName>
        <label>Current left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_top__c</fullName>
        <label>Current top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note_1__c</fullName>
        <label>Note 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Note_2__c</fullName>
        <label>Note 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>account_no_left__c</fullName>
        <label>account no left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>account_no_top__c</fullName>
        <label>account no top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount_paid_left__c</fullName>
        <label>amount paid left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>amount_paid_top__c</fullName>
        <label>amount paid top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>balance_due_left__c</fullName>
        <label>balance due left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>balance_due_top__c</fullName>
        <label>balance due top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_address_left__c</fullName>
        <label>club address left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_address_top__c</fullName>
        <label>club address top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_email_left__c</fullName>
        <label>club email left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_email_top__c</fullName>
        <label>club email top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_name_left__c</fullName>
        <label>club name left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_name_top__c</fullName>
        <label>club name top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_phone_left__c</fullName>
        <label>club phone left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>club_phone_top__c</fullName>
        <label>club phone top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <label>color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>column_order__c</fullName>
        <defaultValue>&apos;0,1,2,3,4,5,6,7,8,9&apos;</defaultValue>
        <label>column order</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>due_left__c</fullName>
        <label>due left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>due_top__c</fullName>
        <label>due top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>email_id__c</fullName>
        <label>email id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax_left__c</fullName>
        <label>fax left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fax_top__c</fullName>
        <label>fax top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logo_left__c</fullName>
        <label>logo left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logo_top__c</fullName>
        <label>logo top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>notes_1_left__c</fullName>
        <label>notes 1 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>notes_1_top__c</fullName>
        <label>notes 1 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>notes_2_left__c</fullName>
        <label>notes 2 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>notes_2_top__c</fullName>
        <label>notes 2 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_30_left__c</fullName>
        <label>over 30 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_30_top__c</fullName>
        <label>over 30 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_60_left__c</fullName>
        <label>over 60 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_60_top__c</fullName>
        <label>over 60 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_90_left__c</fullName>
        <label>over 90 left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>over_90_top__c</fullName>
        <label>over 90 top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>page_no_left__c</fullName>
        <label>page no left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>page_no_top__c</fullName>
        <label>page no top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>statement_date_left__c</fullName>
        <label>statement date left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>statement_date_top__c</fullName>
        <label>statement date top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>statement_label_left__c</fullName>
        <label>statement label left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>statement_label_top__c</fullName>
        <label>statement label top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>table_header_10_Width__c</fullName>
        <label>table header 10 Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>table_header_10__c</fullName>
        <label>table header 10</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>table_header_10_hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>table header 10 hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>table_header_1_Width__c</fullName>
        <label>table header 1 Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>table_header_1__c</fullName>
        <label>table header 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>table_header_1_hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>table header 1 hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>table_header_2_Width__c</fullName>
        <label>table header 2 Width</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>table_header_2__c</fullName>
        <label>table header 2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>table_header_2_hide__c</fullName>
        <defaultValue>false</defaultValue>
        <label>table header 2 hide</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>table_left__c</fullName>
        <label>table left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>table_top__c</fullName>
        <label>table top</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>total_rows_to_show__c</fullName>
        <label>total rows to show</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Member statement pdf</label>
</CustomObject>